--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,17 +1,17 @@
 services:
-#  frontend:
-#    image: tomcat:jdk21-openjdk-bookworm
-#    ports:
-#      - "8080:8080"
-#    networks:
-#      - front-tier
-#      - back-tier
+  frontend:
+    image: tomcat:jdk21-openjdk-bookworm
+    ports:
+      - "8080:8080"
+    networks:
+      - front-tier
+      - back-tier
 #    configs:
 #      - httpd-config
-#    command: bash -c "apt-get update -y && apt-get install -y maven  && cd /usr/local/tomcat/webapps  && mvn clean package && cp -r /usr/local/tomcat/webapps/target/test /usr/local/tomcat/webapps && rm -rf  /usr/local/tomcat/webapps/target   && /usr/local/tomcat/bin/catalina.sh run"
+    command: bash -c "apt-get update -y && apt-get install -y maven  && cd /usr/local/tomcat/webapps  && mvn clean package && cp -r /usr/local/tomcat/webapps/target/test /usr/local/tomcat/webapps && rm -rf  /usr/local/tomcat/webapps/target   && /usr/local/tomcat/bin/catalina.sh run"
 #    tty: true
-#    volumes:
-#      - ../project:/usr/local/tomcat/webapps
+    volumes:
+      - ../project:/usr/local/tomcat/webapps
 
 
   backend:
@@ -21,6 +21,7 @@ services:
     volumes:
       - ../ScriptSql:/home
       - ../db-data:/var/lib/postgresql/data
+#      - ../db-data:/home
     networks:
       - back-tier
     environment:
