--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       #MYSQL_ROOT_PASSWORD: rootpassword
       #MARIADB_ROOT_PASSWORD: test
       POSTGRES_PASSWORD: example
+      POSTGRES_DB: cv
 
 
 networks:
